--- a/selenium_jan_25/pom.xml
+++ b/selenium_jan_25/pom.xml
@@ -9,5 +9,10 @@
   		<artifactId>DummyProject</artifactId>
   		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
+  	<dependency>
+  		<groupId>com.qspider</groupId>
+  		<artifactId>AutomationFramework</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
+  	</dependency>
   </dependencies>
 </project>
